[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "panel_api"
version = "0.1.0"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["panel_api*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint] # Only use pylint for documentation checking. flake8 is the main linter
disable = "all"
enable = ["C0114", "C0116"]